project-in-cloud/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: cached-images-data
        persistentVolumeClaim:
          claimName: cached-images-pvc
      - name: project-config-volume
        configMap:
          name: project-config
      containers:
      - name: todo-app-container
        image: europe-north1-docker.pkg.dev/open-uni-465421/honganmakirepo/todo-app:29d78dacd2e0bff966cca9b4864abe3b1c3a961e
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "300Mi"
        volumeMounts:
        - name: cached-images-data
          mountPath: /mnt/image-cache
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
            host: 10.32.7.56
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
#
